# Inferdyssey

./: .gitignore  README.md  app.py  infer.md  pyproject.toml  rxconfig.py  setup.sh
core/: __init__.py  agent.py  autoresearch.py  benchmark.py  hardware.py  models.py  repos.py  trainer.py  zvec_index.py
experiments/: .models_cache.json
inferdyssey/: __init__.py  inferdyssey.py  layout.py  state.py
inferdyssey/pages/: __init__.py  explorer.py  lab.py  library.py  settings.py  specs.py
registry/: repos.yaml
views/: learn.py  settings.py  specs.py  workspaces.py
